exportador terminado a falta de integrar el nuevo parser

--- a/test/mix.html
+++ b/test/mix.html
@@ -46,7 +46,7 @@
         var justifyUltra = JSON.stringify(ultraStarHelperParseHtml(output));
         var originalUltra = JSON.stringify(ultraStarHelperParseHtml(ultraContent));
 
-
+        console.log(justifyUltra);
       }
       reader.readAsText(files[0], 'ISO-8859-1');
     }
