--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title></title>
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
 	<script	src="https://code.jquery.com/jquery-3.2.1.min.js"	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="	crossorigin="anonymous"></script>
 	<script  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="  crossorigin="anonymous"></script>
@@ -31,7 +33,7 @@
   <div class="sylContainer wrapper">
    <div class="sylSlider scrolls"></div>
  </div>
-
+<i class="material-icons">face</i>
 
 
  <script>
